--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: publication/
     weight: 10
   - name: Docencia
-    url: docencia/
+    url: '#docencia'
     weight: 15
   - name: Proyectos
     url: '#projects'
